--- a/client/src/PlanPage.css
+++ b/client/src/PlanPage.css
@@ -452,7 +452,7 @@ div[role="button"].css-mod-xb97g8 {
 }
 
 div[role="button"].css-mod-xb97g8:hover {
-  background-color: #e7370a;
+  background-color: grey;
   color: white;
 }
 
